# tiny-shell

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  main.c
src/: CMakeLists.txt  shell.c  shell.h
